--- a/main.css
+++ b/main.css
@@ -16,7 +16,8 @@ font-family: 'Red Rose', cursive;
     --light-clr:#fff;
     --ff-R:'Red Rose', cursive;
     --fw-b:700;
-    --grid-1:repeat(2,1fr)
+    --grid-1:repeat(2,1fr);
+    --inp-clr:linear-gradient(93.67deg, rgba(255, 254, 254, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%);
 }
 body{
     margin:0;
@@ -56,6 +57,12 @@ h1,h2,h3,h4{
 .nav-toggle{
     z-index: 1;
 }
+input{
+    background:var(--inp-clr);
+    color:var(--inp-clr);
+    outline:none;
+    border: 0;
+}
 #appear{
     width:60vw;
     height: 100vh;
@@ -65,7 +72,21 @@ h1,h2,h3,h4{
     margin-left: calc(90% - 60vw);
     display: none;
     border-radius: 0.5em;
+    animation: fade 750ms ease-in-out;
     background:linear-gradient(75deg, rgba(7, 19, 54, 1) 0%, black 40.63%, rgba(7, 19, 54, 1) 63.02%, black 100%);
+}
+@keyframes fade {
+    0%{
+        opacity: 0;
+        width: 80vw;
+        height: 40vh;
+    }
+    100%{
+        opacity: 1;
+        width:60vw;
+        margin-left: calc(90% - 60vw);
+        height: 100vh;
+    }
 }
 .nav-home{
     margin: ;
@@ -252,6 +273,11 @@ h4{
 }
 .main3-card2,.main3-card3{
     display: none;
+    animation: fade2 500ms ease-in-out;
+}
+.main3-card3{
+    display: none;
+    animation: fade3 500ms ease-in-out;
 }
 .main3-mar{
     width: 90%;
@@ -276,16 +302,73 @@ font-weight: var(--fw-b);
     display: flex;
     justify-content: center;
     flex-direction: column;
+    animation: fade1 500ms ease-in-out;
 }
-.main3-img1{
+.main3-img1,.main3-img2,.main3-img3{
+    width: 18em;
+    height: 20em;
     border: 1px solid var(--green);
     padding: 1em;
     border-radius: 0.5em;
-    width: 17em;
+    margin: 0 auto;
+    display: flex;
 }
-.main3-cardp{
-    margin-bottom: 0.5em;
-    font-size: 1em;
+.main3-img1>img,.main3-img2>img,.main3-img3>img{
+    margin: 0 auto;
+ }
+ @keyframes fade1 {
+    0%{
+    opacity: 0;
+    margin-left:3em;
+    }
+    50%{
+    opacity: 0.75;
+   
+    }
+    75%{
+    opacity: 0.5;
+ 
+    }
+    100%{
+    opacity: 1;
+    margin-left:0 ;
+    }
+}
+@keyframes fade2 {
+    0%{
+    opacity: 0;
+    margin-left:3em;
+    }
+    50%{
+    opacity: 0.75;
+   
+    }
+    75%{
+    opacity: 0.5;
+ 
+    }
+    100%{
+    opacity: 1;
+    margin-left:0 ;
+    }
+}
+@keyframes fade3 {
+    0%{
+    opacity: 0;
+    margin-left:3em;
+    }
+    50%{
+    opacity: 0.75;
+   
+    }
+    75%{
+    opacity: 0.5;
+ 
+    }
+    100%{
+    opacity: 1;
+    margin-left:0 ;
+    }
 }
 .main3-p{
 text-align: center;
@@ -387,9 +470,6 @@ text-align: center;
     text-align: center;
     color: var(--light-clr);
 }
-.main5-cont>h3{
-    
-}
 .main5-cont>p{
     margin-top: 0.5em;
     font-size: 0.875em;
@@ -467,9 +547,6 @@ input{
     .nft-imag2{
        width: 11em;
     }
-    .nft-imag2>img{
-       
-    }
     .main4{
         display: flex;
         justify-content: flex-start;
@@ -523,7 +600,6 @@ input{
     }
 }
 @media screen and (min-width:1000px) {
-   
     .cont{
         width: 25em;
         margin: 0;
@@ -552,7 +628,6 @@ input{
     }
     .main-img{
         width: 20em;
-        margin-left: ;
     }
     #appear{
         display: block;
@@ -589,8 +664,12 @@ input{
         display: flex;
         justify-content: space-between;
     }
+    .main3-card1{
+        animation: none;
+    }
     .main3-card2,.main3-card3{
         display: block;
+        animation: none;
     }
     .main3-card2,.main3-card3{
         display: flex;
@@ -603,17 +682,13 @@ input{
         border-radius: 0.5em;
         width: 17em;
     }
-    .main3-cardp{
-        margin-bottom: 0.5em;
-        font-size: 1em;
-    }
     .main3-card1-cont{
         display: flex;
         justify-content: space-between;
     }
     .main3-card-p>p{
-    margin: 0;
-    font-size: 0.75em;
+        margin: 0;
+        font-size: 0.75em;
     }
     .main3-size{
         font-size: 1em;
